# servant-oauth2-idp

./: .gitignore  .hlint.yaml  CLAUDE.md  LICENSE  README.md  servant-oauth2-idp.cabal
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
src/Servant/OAuth2/IDP/: API.hs  Config.hs  Errors.hs  Handlers.hs  JWKS.hs  JWT.hs  Metadata.hs  PKCE.hs  Server.hs  Store.hs  Trace.hs  Types.hs
src/Servant/OAuth2/IDP/Auth/: Backend.hs  Demo.hs
src/Servant/OAuth2/IDP/Handlers/: Authorization.hs  HTML.hs  Login.hs  Metadata.hs  Registration.hs  Token.hs
src/Servant/OAuth2/IDP/Store/: InMemory.hs
src/Servant/OAuth2/IDP/Test/: Internal.hs
test/: Main.hs  TestMonad.hs
test/Laws/: AuthBackendAssociatedTypesSpec.hs  AuthBackendSignatureSpec.hs  AuthBackendSpec.hs  AuthCodeFunctorSpec.hs  BoundarySpec.hs  ConsumeAuthCodeSpec.hs  ErrorBoundarySecuritySpec.hs  OAuthStateStoreSpec.hs  OAuthUserTypeSpec.hs
test/Servant/OAuth2/IDP/: APISpec.hs  BearerMethodSpec.hs  BrandingSpec.hs  ConfigSpec.hs  CryptoEntropySpec.hs  ErrorsSpec.hs  JWKSSpec.hs  LucidRenderingSpec.hs  MetadataSpec.hs  PKCESpec.hs  TokenRequestSpec.hs  TraceSpec.hs  TypesSpec.hs
test/Servant/OAuth2/IDP/Handlers/: MetadataSpec.hs
